Fix order hieght on small screen

--- a/src/App.css
+++ b/src/App.css
@@ -32,11 +32,6 @@ h2 {
   border-top: 1px solid #d9d9d9;
 }
 
-.order-list {
-  height: calc(100vh - 15rem);
-  overflow-y: auto;
-}
-
 .order-item {
   margin-bottom: 2rem;
 }
@@ -65,6 +60,11 @@ h2 {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+  }
+
+  .order-list {
+    height: calc(100vh - 18rem);
+    overflow-y: auto;
   }
 }
 
